--- a/src/Componets/css/hoverTableCell.css
+++ b/src/Componets/css/hoverTableCell.css
@@ -1,5 +1,8 @@
 
-
+#del:hover {
+    background-color: rgb(199, 54, 54);
+    cursor: pointer;
+}
 #cnt:hover {
     background-color: rgb(124, 124, 124);
     cursor: pointer;
